--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<div class="row logo">
+	<header class="grumbleHeader">
+	<img class="col-md-2" src="http://placehold.it/100x50">
+	<h1 class="col-md-10 logo">GRUMBLE <small>Find Your Soul Plate</small></h1>
+	
+	</header>
+</div>
+<div class="container">
 
+	
+</div>
 
 
 
