did some html work to put into modals

--- a/index.html
+++ b/index.html
@@ -17,6 +17,53 @@
 	</header>
 </div>
 <div class="container">
+<!--  button click to open first modal -->
+
+
+
+<!--1st modal - distance -->
+<div class= "modalContainer">
+<div class="well">Distance</div>
+	<form>
+		<div class="form-group">
+  			<label for="distance">Max distance</label>
+  			<select class="form-control" id="distance-select">
+    			<option>5 miles</option>
+    			<option>10 miles</option>
+    			<option>15 miles</option>
+    			
+  			</select>
+		</div>
+
+
+     	<div class="col-xs-3">
+  			<label for="ex2">From Zip Code</label>
+  			<input class="form-control" id="zip-input" type="text">
+		</div> 
+		<button type="submit" class="btn btn-warning" id = "distance-submit">Submit</button>
+</form>
+</div>
+
+
+<!-- 2nd modal - Not in the mood for... -->
+<div class= "modalContainer">
+<div class="well">What do you NOT want to eat</div>
+<h2>Click to eliminate options</h2>
+<ul id = "elimination-list">
+<li>Italian</li>
+<li>Mexican</li>
+<li>Food Trucks</li>
+<li>Pizza</li>
+<li>American</li>
+<li>Seafood</li>
+<li>Asian Fusion</li>
+<li>Barbeque</li>
+<li>Deli</li>
+<li>Burgers</li>
+</ul>
+</ul>
+
+</div>
 
 	
 </div>
