testing out flexbox styles in header

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 
 <div class="row grumbleHeader">
-	<header>
-		<h1 class="col-md-2 logo">Grumble</h1>
-		<h2 class="col-md-9 tagline">Find Your Soul Plate</h2>
+	<header class="col-md-12">
+		<h1 class="logo">Grumble</h1>
+		<h2 class="tagline">Find Your Soul Plate</h2>
 	</header>
 </div>
 
@@ -39,7 +39,7 @@
 	  			<label for="ex2">From Zip Code</label>
 	  			<input class="form-control" id="zip-input" type="text">
 			</div> 
-			
+
 			<button type="submit" class="btn btn-warning" id = "distance-submit">Submit</button>
 		</form>
 </div>
