set up js to capture userZIP and radius preference as well as GET weather info from wunderground

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--1st modal - distance -->
 <div class= "modalContainer">
 	<div class="well">Distance</div>
-		<form>
+		<form role="form">
 			<div class="form-group">
 	  			<label for="distance">Max distance</label>
 	  			<select class="form-control" id="distance-select">
@@ -40,7 +40,7 @@
 	  			<input class="form-control" id="zip-input" type="text">
 			</div> 
 
-			<button type="submit" class="btn btn-warning" id = "distance-submit">Submit</button>
+			<button type="submit" class="btn btn-warning" id="distance-submit">Submit</button>
 		</form>
 </div>
 
