starting with flexbox rebuild and some jquery animations

--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
 	<meta charset="UTF-8">
 	<title>GRUMBLE</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Raleway" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<div class="row grumbleHeader">
-	<header class="col-md-12">
+
+	<header class="grumbleHeader">
 		<h1 class="logo">Grumble</h1>
 		<h2 class="tagline">Find Your Soul Plate</h2>
 	</header>
-</div>
 
 <!--  button click to open first modal -->
 
-<div class="container">
+<div class="container positioner">
+	<div id="startScreen" class="positioner">
+		
+			<button id="start"><h1>Click to start!</h1></button>
+	</div>
+
 
 <!--1st modal - distance -->
-<div class= "modalContainer">
+<div id="location" class= "positioner">
 	<div class="well">Distance</div>
 		<form role="form">
 			<div class="form-group">
@@ -46,8 +50,8 @@
 
 
 <!-- 2nd modal - Not in the mood for... -->
-<div class= "modalContainer">
-	<div class="well">What do you NOT want to eat</div>
+<div id="cuisines" class= "positioner">
+	<div class="well">What do you NOT want to eat?</div>
 		<h2>Click to eliminate options</h2>
 			<ul id = "elimination-list">
 				<li>Italian</li>
@@ -62,8 +66,20 @@
 				<li>Burgers</li>
 			</ul>
 	</div>
+
+
+<div id="pricePoint" class= "positioner">
+	<div class="well">How much do you want to spend?</div>
+			<ul id = "dollaSigns">
+				<li>$</li>
+				<li>$$</li>
+				<li>$$$</li>
+				<li>$$$$</li>
+			</ul>
+	</div>
 </div>
 
+</div>
 
 
 
