--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
   integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+<script src="assets/javascript/zomato.js" type="text/javascript"></script>
 <script src="assets/javascript/app.js"></script>
 </body>
 </html>
