--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
 			</ul>
 	</div>
 </div>
-
+<div class="food-photos">
+	<div id="restaurant-one">
+	</div>
+	<div id="restaurant-two">
+	</div>
+	<div id="restaurant-three">
+	</div>
+	<div id="restaurant-four">
+	</div>
+</div>
 
 
 
