school day stuff. pulling most recent master

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <!--1st modal - distance -->
 <div id="location" class= "positioner">
-	<div class="well">Distance</div>
+	<h1>Distance</h1>
 		<form role="form">
 			<div class="form-group">
 	  			<label for="distance">Max distance</label>
@@ -51,25 +51,27 @@
 
 <!-- 2nd modal - Not in the mood for... -->
 <div id="cuisines" class= "positioner">
-	<div class="well">What do you NOT want to eat?</div>
-		<h2>Click to eliminate options</h2>
-			<ul id = "elimination-list">
-				<li>Italian</li>
-				<li>Mexican</li>
-				<li>Food Trucks</li>
-				<li>Pizza</li>
-				<li>American</li>
-				<li>Seafood</li>
-				<li>Asian Fusion</li>
-				<li>Barbeque</li>
-				<li>Deli</li>
-				<li>Burgers</li>
-			</ul>
+	<div class="prompt">
+		<h1>What do you NOT want to eat?</h1>
+			<h2>Click to eliminate options</h2>
+				<ul id = "elimination-list">
+					<li>Italian</li>
+					<li>Mexican</li>
+					<li>Food Trucks</li>
+					<li>Pizza</li>
+					<li>American</li>
+					<li>Seafood</li>
+					<li>Asian Fusion</li>
+					<li>Barbeque</li>
+					<li>Deli</li>
+					<li>Burgers</li>
+				</ul>
 	</div>
+</div>
 
 
 <div id="pricePoint" class= "positioner">
-	<div class="well">How much do you want to spend?</div>
+	<h1>How much do you want to spend?</h1>
 			<ul id = "dollaSigns">
 				<li>$</li>
 				<li>$$</li>
