added html elements

--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 					<li>Deli</li>
 					<li>Burgers</li>
 				</ul>
+			
+			<button type="submit" class="btn btn-warning" id="cuisines-submit">Submit</button>	
 	</div>
 
 
@@ -107,7 +109,26 @@
 				<li>$$$</li>
 				<li>$$$$</li>
 			</ul>
+		<button type="submit" class="btn btn-warning" id="pricePoint-submit">Submit</button>
+
+</div>
+
+<div id="results" class="aligner">
+	<div id="result1">
+
 	</div>
+	
+
+	<div id="result2">
+
+	</div>
+
+
+	<div id="result3">
+
+	</div>
+	
+</div>
 
 <div class="food-photos">
 	<div id="restaurant-one">
