added the click function for cuisine options

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
 	<div class="well">What do you NOT want to eat?</div>
 		<h2>Click to eliminate options</h2>
 			<ul id = "elimination-list">
-				<li>Italian</li>
-				<li>Mexican</li>
-				<li>Food Trucks</li>
-				<li>Pizza</li>
-				<li>American</li>
-				<li>Seafood</li>
-				<li>Asian Fusion</li>
-				<li>Barbeque</li>
-				<li>Deli</li>
-				<li>Burgers</li>
+				<li class= "type">Italian</li>
+				<li class= "type">Mexican</li>
+				<li class= "type">Breakfast</li>
+				<li class= "type">Pizza</li>
+				<li class= "type">American</li>
+				<li class= "type">Seafood</li>
+				<li class= "type">Asian</li>
+				<li class= "type">BBQ</li>
+				<li class= "type">Sandwich</li>
+				<li class= "type">Burger</li>
 			</ul>
 	</div>
 
