--- a/index.html
+++ b/index.html
@@ -145,5 +145,6 @@
   <script type="text/javascript" src="assets/javascript/jquery.cycle.lite.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
 <script src="assets/javascript/app.js"></script>
+<script src="assets/javascript/zomato.js"></script>
 </body>
 </html>
