--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
 				<br>
 				<br>
 					<ul id = "elimination-list">
-						<li>Italian</li>
-						<li>Mexican</li>
-						<li>Food Trucks</li>
-						<li>Pizza</li>
-						<li>American</li>
-						<li>Seafood</li>
-						<li>Asian Fusion</li>
-						<li>Barbeque</li>
-						<li>Deli</li>
-						<li>Burgers</li>
+						<li class="type">Italian</li>
+						<li class="type">Mexican</li>
+						<li class="type">Food Trucks</li>
+						<li class="type">Pizza</li>
+						<li class="type">American</li>
+						<li class="type">Seafood</li>
+						<li class="type">Asian Fusion</li>
+						<li class="type">Barbeque</li>
+						<li class="type">Deli</li>
+						<li class="type">Burgers</li>
 					</ul>
 				
 				<button type="submit" class="btn btn-warning" id="cuisines-submit">Submit</button>	
