--- a/index.html
+++ b/index.html
@@ -104,19 +104,15 @@
 				<button type="submit" class="btn btn-warning" id="cuisines-submit">Submit</button>	
 		</div>
 	</div>
-=======
-
-
-
 
 <div id="pricePoint" class= "aligner">
 	<div id="priceInfo">
 		<h1 id="howMuch" class="prompt">How much do you want to spend?</h1>
 				<ul id = "dollaSigns">
-					<li>$</li>
-					<li>$$</li>
-					<li>$$$</li>
-					<li>$$$$</li>
+					<li class="price" value="1">$</li>
+					<li class="price" value="2">$$</li>
+					<li class="price" value="3">$$$</li>
+					<li class="price" value="4">$$$$</li>
 				</ul>
 			<button type="submit" class="btn btn-warning" id="pricePoint-submit">Submit</button>
 	</div>
