--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 				<button type="submit" class="btn btn-warning" id="cuisines-submit">Submit</button>	
 		</div>
 	</div>
-=======
 
 
 
@@ -123,20 +122,22 @@
 </div>
 
 <div id="results" class="aligner">
-	<div id="result1">
 
+	<div id="resultsInfo">
+		<div id="result1">
+		<h1>Hey BITch!</h1>
+		</div>
+		
+
+		<div id="result2">
+
+		</div>
+
+
+		<div id="result3">
+
+		</div>
 	</div>
-	
-
-	<div id="result2">
-
-	</div>
-
-
-	<div id="result3">
-
-	</div>
-	
 </div>
 
 
