--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>GRUMBLE</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Raleway" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -91,13 +90,13 @@
 					<ul id = "elimination-list">
 						<li class="type">Italian</li>
 						<li class="type">Mexican</li>
-						<li class="type">Food Trucks</li>
+						<li class="type">Breakfast</li>
 						<li class="type">Pizza</li>
 						<li class="type">American</li>
 						<li class="type">Seafood</li>
-						<li class="type">Asian Fusion</li>
-						<li class="type">Barbeque</li>
-						<li class="type">Deli</li>
+						<li class="type">Asian</li>
+						<li class="type">BBQ</li>
+						<li class="type">Sandwiches</li>
 						<li class="type">Burgers</li>
 					</ul>
 				
