added some sizing for the reults and changed the name of a few of the cuisine list items.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						<li class="type">Seafood</li>
 						<li class="type">Asian</li>
 						<li class="type">BBQ</li>
-						<li class="type">Sandwiches</li>
-						<li class="type">Burgers</li>
+						<li class="type">Sandwich</li>
+						<li class="type">Burger</li>
 					</ul>
 				
 				<button type="submit" class="btn btn-warning" id="cuisines-submit">Submit</button>	
