change lat and long to dallas for fresh search results and testing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<img src="assets/images/b8.jpg" class="bgM"/>
 		<img src="assets/images/b9.jpg" class="bgM"/>
 		<img src="assets/images/b10.jpg" class="bgM"/>
-		<img src="assets/images/b11.jpeg" class="bgM"/>
+		<img src="assets/images/b11.jpg" class="bgM"/>
 		<img src="assets/images/b12.jpg" class="bgM"/>
 		<img src="assets/images/b13.jpg" class="bgM"/>
 
