--- a/index.html
+++ b/index.html
@@ -223,7 +223,10 @@
 
 
 <!-- <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script> -->
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
 <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 <script type="text/javascript" src="assets/javascript/jquery.cycle.lite.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
