zip code input will only accept 5 numerical

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 	     	<div class="col-xs-12">
 	  			<label for="ex2">From Zip Code: </label>
-	  			<input class="form-control" id="zip-input" type="text">
+	  			<input class="form-control" id="zip-input" maxlength="5" type="text">
 			</div> 
 			<br>
 			<div class="buttons">
