add divs to html for more results section

--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@
 			</div>	
 				
 	</div>
+	<div class="extra-results">
+		<div id="extra-result-1"></div>
+		<div id="extra-result-2"></div>
+		<div id="extra-result-3"></div>
+		<div id="extra-result-4"></div>
+		<div id="extra-result-5"></div>
+		<div id="extra-result-6"></div>
+		<div id="extra-result-7"></div>
+		<div id="extra-result-8"></div>
+	</div>
+
 </div>
 
 
