--- a/index.html
+++ b/index.html
@@ -154,41 +154,33 @@
 </div>
 
 <div id="results" class="aligner">
-
-	<div id="resultsInfo">
-				
-			<div class="flipper">
-				<div id="result1" class="front">
-				</div>
-
-				<div id="result1Back" class="back">
-					<div id="map1">
-					</div>		
-				</div>
-			</div>	
-			
-			<div class="flipper">
-				<div id="result2" class="front">
-				</div>
-
-				<div id="result2Back" class="back">
-					<div id="map2">
-					</div>	
-				</div>
-			</div>	
-
-			<div class="flipper">
-				<div id="result3" class="front">
-				</div>
-
-				<div id="result3Back" class="back">
-					<div id="map3">
-					</div>	
-				</div>
-			</div>	
-				
-	</div>
-</div>
+        <div id="resultsInfo">
+            <div id="flip1" class="flipper">
+                <div id="result1" class="front">
+                </div>
+                <div id="result1Back" class="back">
+                    <div id="map1" style="margin: 1em; width:350px; height:300px;">
+                    </div>
+                </div>
+            </div>
+            <div id="flip2" class="flipper">
+                <div id="result2" class="front">
+                </div>
+                <div id="result2Back" class="back">
+                    <div id="map2" style="margin: 1em; width:350px; height:300px;">
+                    </div>
+                </div>
+            </div>
+            <div id="flip3" class="flipper">
+                <div id="result3" class="front">
+                </div>
+                <div id="result3Back" class="back">
+                    <div id="map3" style="margin: 1em; width:350px; height:300px;">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
@@ -205,17 +197,21 @@
 
 <!-- <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase.js"></script> -->
   
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfQu6oJU6bPRuUyHqpk8HStkK76-cHBN0&callback=initMap" async defer></script>
+
+
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+
 <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
 <script type="text/javascript" src="assets/javascript/jquery.cycle.lite.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script> -->
 
 <script src="assets/javascript/app.js"></script>
 <script src="assets/javascript/zomato.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfQu6oJU6bPRuUyHqpk8HStkK76-cHBN0&callback=initMap" async defer></script>
+
 
 </body>
 
