comment out extra results js and html for later use

--- a/index.html
+++ b/index.html
@@ -188,16 +188,16 @@
 			</div>	
 				
 	</div>
-	<div class="extra-results">
-		<div id="extra-result-1"></div>
-		<div id="extra-result-2"></div>
+	<!-- <div class="extra-results">
+		<div id="extra-result-1"><h1>Name</h1></div>
+		<div id="extra-result-2"></div><h1>Name Two</h1></div>
 		<div id="extra-result-3"></div>
 		<div id="extra-result-4"></div>
 		<div id="extra-result-5"></div>
 		<div id="extra-result-6"></div>
 		<div id="extra-result-7"></div>
 		<div id="extra-result-8"></div>
-	</div>
+	</div> -->
 
 </div>
 
