when an eliminated cuisine is clicked it is removed from an array

--- a/index.html
+++ b/index.html
@@ -107,16 +107,16 @@
 				<br>
 				<br>
 					<ul id = "elimination-list">
-						<li class="type picked">Italian</li>
-						<li class="type picked">Mexican</li>
-						<li class="type picked">Breakfast</li>
-						<li class="type picked">Pizza</li>
-						<li class="type picked">American</li>
-						<li class="type picked">Seafood</li>
-						<li class="type picked">Asian</li>
-						<li class="type picked">BBQ</li>
-						<li class="type picked">Sandwich</li>
-						<li class="type picked">Burger</li>
+						<li class="type picked selected">Italian</li>
+						<li class="type picked selected">Mexican</li>
+						<li class="type picked selected">Breakfast</li>
+						<li class="type picked selected">Pizza</li>
+						<li class="type picked selected">American</li>
+						<li class="type picked selected">Seafood</li>
+						<li class="type picked selected">Asian</li>
+						<li class="type picked selected">BBQ</li>
+						<li class="type picked selected">Sandwich</li>
+						<li class="type picked selected">Burger</li>
 					</ul>
 			<br>
 			<div class="buttons">
