--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 
 		<div id="cuisinesInfo">
 			<h1 id="notWant" class="promptAlt">What do you NOT want to eat?</h1>
-				<h2>You must eliminate at least 3</h2>
 				<br>
 				<br>
 					<ul id = "elimination-list">
@@ -210,8 +209,7 @@
 
 <script src="assets/javascript/app.js"></script>
 <script src="assets/javascript/zomato.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfQu6oJU6bPRuUyHqpk8HStkK76-cHBN0&callback=initMap" async defer></script>
-
+ <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfQu6oJU6bPRuUyHqpk8HStkK76-cHBN0"></script>
 
 </body>
 
