responsive media stuff

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>GRUMBLE</title>
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Raleway" rel="stylesheet">
@@ -152,29 +153,46 @@
 	</div>
 </div>
 
+<div id="topResultsBanner">
+	<h1>Your Top 3 Results</h1>
+</div>
+
 <div id="results" class="aligner">
+
+		
 
         <div id="resultsInfo">
             <div id="flip1" class="flipper">
                 <div id="result1" class="front">
+
+                <h4>Click card for more info!</h4>
                 </div>
                 <div id="result1Back" class="back">
+                <h4>Double click to go back!</h4>
                     <div id="map1" style="margin: 1em; width:350px; height:300px;">
                     </div>
                 </div>
             </div>
             <div id="flip2" class="flipper">
                 <div id="result2" class="front">
+
+
+                <h4>Click card for more info!</h4>
                 </div>
                 <div id="result2Back" class="back">
+                <h4>Double click to go back!</h4>
                     <div id="map2" style="margin: 1em; width:350px; height:300px;">
                     </div>
                 </div>
             </div>
             <div id="flip3" class="flipper">
                 <div id="result3" class="front">
+
+                <h4>Click card for more info!</h4>
                 </div>
                 <div id="result3Back" class="back">
+
+                	<h4>Double click to go back!</h4>
                     <div id="map3" style="margin: 1em; width:350px; height:300px;">
                     </div>
                 </div>
