--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
 
-	<header class="grumbleHeader">
-		<h1 class="logo">Grumble</h1>
+	<header id="header" class="grumbleHeader">
+		<a href="#"><h1 class="logo">Grumble</h1></a>
 		<h2 class="tagline">Find Your Soul Plate</h2>
 	</header>
 
@@ -199,7 +199,9 @@
             </div>
         </div>
     </div>
-
+<div id="buttonBox">
+	<button type="submit" class="btn btn-submit-alt btn-lg" id="startOver">Start Over</button>
+</div>
 
 
 
